[metadata]
name = steam-community-market
version = attr: steam_community_market.__version__
author = offish
author_email = overutilization@gmail.com
maintainer = RoachxD
maintainer_email = nicolae.adrian.m@gmail.com
url = https://github.com/offish/steam-community-market
project_urls =
  Chat: Discord = https://discord.gg/t8nHSvA
  Docs: RTD = https://steam-community-market.readthedocs.io/
  Donation: Author - Bitcoin = bitcoin:bc1qg275cltpez2dcedv2qucrtjxyhq4xurykstldk
  Donation: Author - Steam = https://steamcommunity.com/tradeoffer/new/?partner=293059984&token=0-l_idZR
  Donation: Maintainer - Bitcoin = bitcoin:bc1qmyyratw3zaf6jj7azrvyr8vqmflpvhwzcf2zp7
  Donation: Maintainer - Ko-fi = https://ko-fi.com/roachxd
  GitHub: issues = https://github.com/offish/steam-community-market/issues
  GitHub: releases = https://github.com/offish/steam-community-market/releases
  GitHub: repo = https://github.com/offish/steam-community-market/
description = A synchronous Python read-only wrapper for the Steam Community Market API.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
platform = any
keywords = steam, community, market, wrapper, api, python
classifiers =
  Development Status :: 5 - Production/Stable

  Intended Audience :: Developers

  License :: OSI Approved :: MIT License

  Operating System :: OS Independent

  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11

  Topic :: Games/Entertainment
  Topic :: Internet :: WWW/HTTP
  Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.9
packages = find:
zip_safe = False
include_package_data = True
install_requires =
  requests

[options.extras_require]
dev =
  black

[options.package_data]
* = *.txt, *.md
